--- a/exercise/common.css
+++ b/exercise/common.css
@@ -1,3 +1,50 @@
+/* 清除内外边距 */
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
+dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
+pre, /* text formatting elements 文本格式元素 */
+fieldset, lengend, button, input, textarea, /* form elements 表单元素 */
+th, td { /* table elements 表格元素 */
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 
-a {color:#666;}
+/* 设置默认字体 */
+body, button, input, select, textarea { /* for ie */
+    font: 12px/1 Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif; /* 用 ascii 字符表示，使得在任何编码下都无问题 */
+}
+
+.fl {
+    float: left;
+}
+
+.fr {
+    float: right;
+}
+
+.w1170 {
+    width: 1170px;
+}
+
+.mb10 {
+    margin-bottom: 10px;
+}
+.mb20{
+    margin-bottom: 20px;
+}
+.mc {
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+}
+
+a {color:#666;
+    text-decoration: none;
+}
 a:hover {color:#2bb8aa;}
+.fs-14{
+    font-size: 14px;
+}
+.fs-16{
+    font-size:16px;
+}
