--- a/exercise/header.css
+++ b/exercise/header.css
@@ -1,48 +1,5 @@
 /*header.css*/
-/* 清除内外边距 */
-body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, /* structural elements 结构元素 */
-dl, dt, dd, ul, ol, li, /* list elements 列表元素 */
-pre, /* text formatting elements 文本格式元素 */
-fieldset, lengend, button, input, textarea, /* form elements 表单元素 */
-th, td { /* table elements 表格元素 */
-    margin: 0;
-    padding: 0;
-    list-style: none;
-}
-/* 设置默认字体 */
-body, button, input, select, textarea { /* for ie */
-    font: 12px/1 Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif; /* 用 ascii 字符表示，使得在任何编码下都无问题 */
-}
 
-a {
-    text-decoration: none;
-}
-
-.fl {
-    float: left;
-}
-
-.fr {
-    float: right;
-}
-
-.mb10 {
-    margin-bottom: 10px;
-}
-
-.w1170 {
-    width: 1170px;
-}
-
-.mb10 {
-    margin-bottom: 10px;
-}
-
-.mc {
-    margin-right: auto;
-    margin-left: auto;
-    display: block;
-}
 
 /*top顶部状态栏部分*/
 .top {
@@ -181,7 +138,6 @@ a:hover .icon-tri { /*移上时改变箭头.top a.dropdown:hover .icon-tri*/
 
 /*logo搜索区域*/
 .logo {
-    margin: auto;
     height: 70px;
 }
 
@@ -197,36 +153,69 @@ a:hover .icon-tri { /*移上时改变箭头.top a.dropdown:hover .icon-tri*/
     margin: 6px 0px 18px 0px;
 }
 
-.logo .search-box{
+.logo .search-box {
     margin-left: 193px;
 }
-.logo form{
-    border:2px solid #2db8ad;
+
+.logo form {
+    border: 2px solid #2db8ad;
 }
-.logo .current-search-box{
+
+.logo .current-search-box {
     display: inline-block;
     font-size: 14px;
-    height:38px;
+    height: 38px;
     line-height: 38px;
-    padding:0 15px 0 15px;
+    padding: 0 15px 0 15px;
 }
-.logo .search-input{    /*表单中的搜索框*/
-    height:38px;
+
+.logo .search-input { /*表单中的搜索框*/
+    height: 38px;
     line-height: 38px;
-    width:343px;
-    border:none;
-    border-left:1px solid #ccc;
-    padding:0px 5px;
+    width: 343px;
+    border: none;
+    border-left: 1px solid #ccc;
+    padding: 0px 5px;
 }
-.logo .search-btn{
-    height:38px;
-    width:65px;
+
+.logo .search-btn {
+    height: 38px;
+    width: 65px;
     background-color: #2db8ad;
-    border:none;
-    color:#fff;
-    font-size:14px;
+    border: none;
+    color: #fff;
+    font-size: 14px;
 }
-    /*menu菜单栏部分*/
+
+/*logo最右边的部分*/
+.logo .commitment {
+    margin-top: 8px; /*也可以设置margin，因为后面是一个整体div*/
+}
+
+.logo .commitment li {
+    float: left;
+    margin-left: 12px;
+}
+
+.logo .commitment span {
+    text-align: center;
+}
+
+.logo .commitment .icon-return {
+    display: block;
+    width: 24px;
+    height: 24px;
+    background: url("../images/sp-main.png") -320px -227px no-repeat;
+    margin: 0 auto;
+}
+
+/*logo下面的热搜部分的部分*/
+.logo .hotsearch li {
+    float: left;
+    margin: 13px 10px 0 0;
+}
+
+/*menu菜单栏部分*/
 
 .nav {
     height: 520px;
@@ -261,17 +250,18 @@ a:hover .icon-tri { /*移上时改变箭头.top a.dropdown:hover .icon-tri*/
     border-bottom: 1px solid #ccc;
 }
 
-.cates-item { /*展开容器的一个li*/
+.menu .cates-item { /*展开容器的一个li*/
     /*因为li中的行高并不完全一样，所以不能这样设置*/
     /* height: 50px;
      line-height: 50px;*/
-
 }
 
-.cats-level1 { /*li中的第一个div*/
+.menu .cates-item .cats-level1 { /*li中的第一个div*/
     height: 50px;
     line-height: 50px;
     margin-left: 10px;
+    border-right:1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
 
 }
 
@@ -307,3 +297,39 @@ a:hover .icon-tri { /*移上时改变箭头.top a.dropdown:hover .icon-tri*/
     position: relative;
     top: 15px;
 }
+
+.menu .cates-level2 {
+    position: absolute;
+    top: 0px;
+    left: 246px;
+    height:459px;
+    background: white;
+    white-space: nowrap; /*保证文字不换行*/
+    border-right:1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+    display: none;
+}
+
+.menu .cates-level2 dl {
+    display: inline-block;
+    padding: 20px 15px 0 15px;
+    vertical-align: top;
+}
+.menu .cates-level2 dt{
+    color:#666;
+  /*  margin-bottom:15px;*/
+}
+.menu .cates-level2 dl dd {
+    margin-top: 10px;
+    font-size: 14px;
+}
+.menu .on .cats-level1{
+    border-right:1px solid transparent;
+}
+.menu .on .icon-arrow-right{
+    visibility: hidden;
+}
+.menu .on .cates-level2{
+    display: block;
+}
+
